sdk/containerservice/arm-containerservice/samples/v25/javascript/README.md
# @azure/arm-containerservice client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for @azure/arm-containerservice in some common scenarios.

| **File Name**                                                                                                                     | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| --------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [agentPoolsAbortLatestOperationSample.js][agentpoolsabortlatestoperationsample]                                                   | aborts the currently running operation on the agent pool. The Agent Pool will be moved to a Canceling state and eventually to a Canceled state when cancellation finishes. If the operation completes before cancellation can take place, a 409 error code is returned. x-ms-original-file: 2026-04-02-preview/AgentPoolsAbortOperation.json                                                                                                            |
| [agentPoolsCompleteUpgradeSample.js][agentpoolscompleteupgradesample]                                                             | completes the upgrade operation for the specified agent pool. x-ms-original-file: 2026-04-02-preview/AgentPoolsCompleteUpgrade.json                                                                                                                                                                                                                                                                                                                     |
| [agentPoolsCreateOrUpdateSample.js][agentpoolscreateorupdatesample]                                                               | creates or updates an agent pool in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/AgentPoolsAssociate_CRG.json                                                                                                                                                                                                                                                                                                                  |
| [agentPoolsDeleteMachinesSample.js][agentpoolsdeletemachinessample]                                                               | deletes specific machines in an agent pool. x-ms-original-file: 2026-04-02-preview/AgentPoolsDeleteMachines.json                                                                                                                                                                                                                                                                                                                                        |
| [agentPoolsDeleteSample.js][agentpoolsdeletesample]                                                                               | deletes an agent pool in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/AgentPoolsDelete.json                                                                                                                                                                                                                                                                                                                                    |
| [agentPoolsGetAvailableAgentPoolVersionsSample.js][agentpoolsgetavailableagentpoolversionssample]                                 | see [supported Kubernetes versions](https://docs.microsoft.com/azure/aks/supported-kubernetes-versions) for more details about the version lifecycle. x-ms-original-file: 2026-04-02-preview/AgentPoolsGetAgentPoolAvailableVersions.json                                                                                                                                                                                                               |
| [agentPoolsGetSample.js][agentpoolsgetsample]                                                                                     | gets the specified managed cluster agent pool. x-ms-original-file: 2026-04-02-preview/AgentPoolsGet.json                                                                                                                                                                                                                                                                                                                                                |
| [agentPoolsGetUpgradeProfileSample.js][agentpoolsgetupgradeprofilesample]                                                         | gets the upgrade profile for an agent pool. x-ms-original-file: 2026-04-02-preview/AgentPoolsGetUpgradeProfile.json                                                                                                                                                                                                                                                                                                                                     |
| [agentPoolsListSample.js][agentpoolslistsample]                                                                                   | gets a list of agent pools in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/AgentPoolsList.json                                                                                                                                                                                                                                                                                                                                 |
| [agentPoolsUpgradeNodeImageVersionSample.js][agentpoolsupgradenodeimageversionsample]                                             | upgrading the node image version of an agent pool applies the newest OS and runtime updates to the nodes. AKS provides one new image per week with the latest updates. For more details on node image versions, see: https://docs.microsoft.com/azure/aks/node-image-upgrade x-ms-original-file: 2026-04-02-preview/AgentPoolsUpgradeNodeImageVersion.json                                                                                              |
| [containerServiceListNodeImageVersionsSample.js][containerservicelistnodeimageversionssample]                                     | only returns the latest version of each node image. For example there may be an AKSUbuntu-1804gen2containerd-2024.01.26, but only AKSUbuntu-1804gen2containerd-2024.02.02 is visible in this list. x-ms-original-file: 2026-04-02-preview/NodeImageVersions_List.json                                                                                                                                                                                   |
| [identityBindingsCreateOrUpdateSample.js][identitybindingscreateorupdatesample]                                                   | creates or updates an identity binding in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/IdentityBindings_Create_Or_Update.json                                                                                                                                                                                                                                                                                                  |
| [identityBindingsDeleteSample.js][identitybindingsdeletesample]                                                                   | deletes an identity binding in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/IdentityBindings_Delete.json                                                                                                                                                                                                                                                                                                                       |
| [identityBindingsGetSample.js][identitybindingsgetsample]                                                                         | gets the specified Identity Binding. x-ms-original-file: 2026-04-02-preview/IdentityBindings_Get.json                                                                                                                                                                                                                                                                                                                                                   |
| [identityBindingsListByManagedClusterSample.js][identitybindingslistbymanagedclustersample]                                       | gets a list of identity bindings in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/IdentityBindings_List.json                                                                                                                                                                                                                                                                                                                    |
| [jwtAuthenticatorsCreateOrUpdateSample.js][jwtauthenticatorscreateorupdatesample]                                                 | creates or updates JWT authenticator in the managed cluster and updates the managed cluster to apply the settings. x-ms-original-file: 2026-04-02-preview/JWTAuthenticators_Create_Or_Update.json                                                                                                                                                                                                                                                       |
| [jwtAuthenticatorsDeleteSample.js][jwtauthenticatorsdeletesample]                                                                 | deletes a JWT authenticator and updates the managed cluster to apply the settings. x-ms-original-file: 2026-04-02-preview/JWTAuthenticators_Delete.json                                                                                                                                                                                                                                                                                                 |
| [jwtAuthenticatorsGetSample.js][jwtauthenticatorsgetsample]                                                                       | gets the specified JWT authenticator of a managed cluster. x-ms-original-file: 2026-04-02-preview/JWTAuthenticators_Get.json                                                                                                                                                                                                                                                                                                                            |
| [jwtAuthenticatorsListByManagedClusterSample.js][jwtauthenticatorslistbymanagedclustersample]                                     | gets a list of JWT authenticators in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/JWTAuthenticators_List.json                                                                                                                                                                                                                                                                                                                  |
| [loadBalancersCreateOrUpdateSample.js][loadbalancerscreateorupdatesample]                                                         | creates or updates a load balancer in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/LoadBalancers_Create_Or_Update.json                                                                                                                                                                                                                                                                                                         |
| [loadBalancersDeleteSample.js][loadbalancersdeletesample]                                                                         | deletes a load balancer in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/LoadBalancers_Delete.json                                                                                                                                                                                                                                                                                                                              |
| [loadBalancersGetSample.js][loadbalancersgetsample]                                                                               | gets the specified load balancer. x-ms-original-file: 2026-04-02-preview/LoadBalancers_Get.json                                                                                                                                                                                                                                                                                                                                                         |
| [loadBalancersListByManagedClusterSample.js][loadbalancerslistbymanagedclustersample]                                             | gets a list of load balancers in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/LoadBalancers_List.json                                                                                                                                                                                                                                                                                                                          |
| [machinesCreateOrUpdateSample.js][machinescreateorupdatesample]                                                                   | creates or updates a machine in the specified agent pool. x-ms-original-file: 2026-04-02-preview/MachineCreate_Update.json                                                                                                                                                                                                                                                                                                                              |
| [machinesGetSample.js][machinesgetsample]                                                                                         | get a specific machine in the specified agent pool. x-ms-original-file: 2026-04-02-preview/MachineGet.json                                                                                                                                                                                                                                                                                                                                              |
| [machinesListSample.js][machineslistsample]                                                                                       | gets a list of machines in the specified agent pool. x-ms-original-file: 2026-04-02-preview/MachineList.json                                                                                                                                                                                                                                                                                                                                            |
| [maintenanceConfigurationsCreateOrUpdateSample.js][maintenanceconfigurationscreateorupdatesample]                                 | creates or updates a maintenance configuration in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/MaintenanceConfigurationsCreate_Update_MaintenanceWindow.json                                                                                                                                                                                                                                                                   |
| [maintenanceConfigurationsDeleteSample.js][maintenanceconfigurationsdeletesample]                                                 | deletes a maintenance configuration. x-ms-original-file: 2026-04-02-preview/MaintenanceConfigurationsDelete_MaintenanceWindow.json                                                                                                                                                                                                                                                                                                                      |
| [maintenanceConfigurationsGetSample.js][maintenanceconfigurationsgetsample]                                                       | gets the specified maintenance configuration of a managed cluster. x-ms-original-file: 2026-04-02-preview/MaintenanceConfigurationsGet_MaintenanceWindow.json                                                                                                                                                                                                                                                                                           |
| [maintenanceConfigurationsListByManagedClusterSample.js][maintenanceconfigurationslistbymanagedclustersample]                     | gets a list of maintenance configurations in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/MaintenanceConfigurationsList_MaintenanceWindow.json                                                                                                                                                                                                                                                                                 |
| [maintenanceWindowsCreateOrUpdateSample.js][maintenancewindowscreateorupdatesample]                                               | creates or updates a maintenance window. x-ms-original-file: 2026-04-02-preview/MaintenanceWindowsCreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                   |
| [maintenanceWindowsDeleteSample.js][maintenancewindowsdeletesample]                                                               | deletes a maintenance window. x-ms-original-file: 2026-04-02-preview/MaintenanceWindowsDelete.json                                                                                                                                                                                                                                                                                                                                                      |
| [maintenanceWindowsGetSample.js][maintenancewindowsgetsample]                                                                     | gets the specified maintenance window. x-ms-original-file: 2026-04-02-preview/MaintenanceWindowsGet.json                                                                                                                                                                                                                                                                                                                                                |
| [maintenanceWindowsListBySubscriptionSample.js][maintenancewindowslistbysubscriptionsample]                                       | lists maintenance windows in the specified subscription. x-ms-original-file: 2026-04-02-preview/MaintenanceWindowsListBySubscription.json                                                                                                                                                                                                                                                                                                               |
| [maintenanceWindowsListSample.js][maintenancewindowslistsample]                                                                   | lists maintenance windows in the specified resource group. x-ms-original-file: 2026-04-02-preview/MaintenanceWindowsList.json                                                                                                                                                                                                                                                                                                                           |
| [maintenanceWindowsUpdateTagsSample.js][maintenancewindowsupdatetagssample]                                                       | updates tags on a maintenance window. x-ms-original-file: 2026-04-02-preview/MaintenanceWindowsUpdateTags.json                                                                                                                                                                                                                                                                                                                                          |
| [managedClusterSnapshotsCreateOrUpdateSample.js][managedclustersnapshotscreateorupdatesample]                                     | creates or updates a managed cluster snapshot. x-ms-original-file: 2026-04-02-preview/ManagedClusterSnapshotsCreate.json                                                                                                                                                                                                                                                                                                                                |
| [managedClusterSnapshotsDeleteSample.js][managedclustersnapshotsdeletesample]                                                     | deletes a managed cluster snapshot. x-ms-original-file: 2026-04-02-preview/ManagedClusterSnapshotsDelete.json                                                                                                                                                                                                                                                                                                                                           |
| [managedClusterSnapshotsGetSample.js][managedclustersnapshotsgetsample]                                                           | gets a managed cluster snapshot. x-ms-original-file: 2026-04-02-preview/ManagedClusterSnapshotsGet.json                                                                                                                                                                                                                                                                                                                                                 |
| [managedClusterSnapshotsListByResourceGroupSample.js][managedclustersnapshotslistbyresourcegroupsample]                           | lists managed cluster snapshots in the specified subscription and resource group. x-ms-original-file: 2026-04-02-preview/ManagedClusterSnapshotsListByResourceGroup.json                                                                                                                                                                                                                                                                                |
| [managedClusterSnapshotsListSample.js][managedclustersnapshotslistsample]                                                         | gets a list of managed cluster snapshots in the specified subscription. x-ms-original-file: 2026-04-02-preview/ManagedClusterSnapshotsList.json                                                                                                                                                                                                                                                                                                         |
| [managedClusterSnapshotsUpdateTagsSample.js][managedclustersnapshotsupdatetagssample]                                             | updates tags on a managed cluster snapshot. x-ms-original-file: 2026-04-02-preview/ManagedClusterSnapshotsUpdateTags.json                                                                                                                                                                                                                                                                                                                               |
| [managedClustersAbortLatestOperationSample.js][managedclustersabortlatestoperationsample]                                         | aborts the currently running operation on the managed cluster. The Managed Cluster will be moved to a Canceling state and eventually to a Canceled state when cancellation finishes. If the operation completes before cancellation can take place, a 409 error code is returned. x-ms-original-file: 2026-04-02-preview/ManagedClustersAbortOperation.json                                                                                             |
| [managedClustersCreateOrUpdateSample.js][managedclusterscreateorupdatesample]                                                     | creates or updates a managed cluster. x-ms-original-file: 2026-04-02-preview/AdvancedNetworkingTransitEncryption.json                                                                                                                                                                                                                                                                                                                                   |
| [managedClustersDeleteSample.js][managedclustersdeletesample]                                                                     | deletes a managed cluster. x-ms-original-file: 2026-04-02-preview/ManagedClustersDelete.json                                                                                                                                                                                                                                                                                                                                                            |
| [managedClustersGetAccessProfileSample.js][managedclustersgetaccessprofilesample]                                                 | **WARNING**: This API will be deprecated. Instead use [ListClusterUserCredentials](https://docs.microsoft.com/rest/api/aks/managedclusters/listclusterusercredentials) or [ListClusterAdminCredentials](https://docs.microsoft.com/rest/api/aks/managedclusters/listclusteradmincredentials) . x-ms-original-file: 2026-04-02-preview/ManagedClustersGetAccessProfile.json                                                                              |
| [managedClustersGetCommandResultSample.js][managedclustersgetcommandresultsample]                                                 | gets the results of a command which has been run on the Managed Cluster. x-ms-original-file: 2026-04-02-preview/RunCommandResultFailed.json                                                                                                                                                                                                                                                                                                             |
| [managedClustersGetGuardrailsVersionsSample.js][managedclustersgetguardrailsversionssample]                                       | contains Guardrails version along with its support info and whether it is a default version. x-ms-original-file: 2026-04-02-preview/GetGuardrailsVersions.json                                                                                                                                                                                                                                                                                          |
| [managedClustersGetMeshRevisionProfileSample.js][managedclustersgetmeshrevisionprofilesample]                                     | contains extra metadata on the revision, including supported revisions, cluster compatibility and available upgrades x-ms-original-file: 2026-04-02-preview/ManagedClustersGet_MeshRevisionProfile.json                                                                                                                                                                                                                                                 |
| [managedClustersGetMeshUpgradeProfileSample.js][managedclustersgetmeshupgradeprofilesample]                                       | gets available upgrades for a service mesh in a cluster. x-ms-original-file: 2026-04-02-preview/ManagedClustersGet_MeshUpgradeProfile.json                                                                                                                                                                                                                                                                                                              |
| [managedClustersGetSafeguardsVersionsSample.js][managedclustersgetsafeguardsversionssample]                                       | contains Safeguards version along with its support info and whether it is a default version. x-ms-original-file: 2026-04-02-preview/GetSafeguardsVersions.json                                                                                                                                                                                                                                                                                          |
| [managedClustersGetSample.js][managedclustersgetsample]                                                                           | gets a managed cluster. x-ms-original-file: 2026-04-02-preview/ManagedClustersGet.json                                                                                                                                                                                                                                                                                                                                                                  |
| [managedClustersGetUpgradeProfileSample.js][managedclustersgetupgradeprofilesample]                                               | gets the upgrade profile of a managed cluster. x-ms-original-file: 2026-04-02-preview/ManagedClustersGetUpgradeProfile.json                                                                                                                                                                                                                                                                                                                             |
| [managedClustersListByResourceGroupSample.js][managedclusterslistbyresourcegroupsample]                                           | lists managed clusters in the specified subscription and resource group. x-ms-original-file: 2026-04-02-preview/ManagedClustersListByResourceGroup.json                                                                                                                                                                                                                                                                                                 |
| [managedClustersListClusterAdminCredentialsSample.js][managedclusterslistclusteradmincredentialssample]                           | lists the admin credentials of a managed cluster. x-ms-original-file: 2026-04-02-preview/ManagedClustersListClusterAdminCredentials.json                                                                                                                                                                                                                                                                                                                |
| [managedClustersListClusterMonitoringUserCredentialsSample.js][managedclusterslistclustermonitoringusercredentialssample]         | lists the cluster monitoring user credentials of a managed cluster. x-ms-original-file: 2026-04-02-preview/ManagedClustersListClusterCredentialResult.json                                                                                                                                                                                                                                                                                              |
| [managedClustersListClusterUserCredentialsSample.js][managedclusterslistclusterusercredentialssample]                             | lists the user credentials of a managed cluster. x-ms-original-file: 2026-04-02-preview/ManagedClustersListClusterUserCredentials.json                                                                                                                                                                                                                                                                                                                  |
| [managedClustersListGuardrailsVersionsSample.js][managedclusterslistguardrailsversionssample]                                     | contains list of Guardrails version along with its support info and whether it is a default version. x-ms-original-file: 2026-04-02-preview/ListGuardrailsVersions.json                                                                                                                                                                                                                                                                                 |
| [managedClustersListKubernetesVersionsSample.js][managedclusterslistkubernetesversionssample]                                     | contains extra metadata on the version, including supported patch versions, capabilities, available upgrades, and details on preview status of the version x-ms-original-file: 2026-04-02-preview/KubernetesVersions_List.json                                                                                                                                                                                                                          |
| [managedClustersListMeshRevisionProfilesSample.js][managedclusterslistmeshrevisionprofilessample]                                 | contains extra metadata on each revision, including supported revisions, cluster compatibility and available upgrades x-ms-original-file: 2026-04-02-preview/ManagedClustersList_MeshRevisionProfiles.json                                                                                                                                                                                                                                              |
| [managedClustersListMeshUpgradeProfilesSample.js][managedclusterslistmeshupgradeprofilessample]                                   | lists available upgrades for all service meshes in a specific cluster. x-ms-original-file: 2026-04-02-preview/ManagedClustersList_MeshUpgradeProfiles.json                                                                                                                                                                                                                                                                                              |
| [managedClustersListOutboundNetworkDependenciesEndpointsSample.js][managedclusterslistoutboundnetworkdependenciesendpointssample] | gets a list of egress endpoints (network endpoints of all outbound dependencies) in the specified managed cluster. The operation returns properties of each egress endpoint. x-ms-original-file: 2026-04-02-preview/OutboundNetworkDependenciesEndpointsList.json                                                                                                                                                                                       |
| [managedClustersListSafeguardsVersionsSample.js][managedclusterslistsafeguardsversionssample]                                     | contains list of Safeguards version along with its support info and whether it is a default version. x-ms-original-file: 2026-04-02-preview/ListSafeguardsVersions.json                                                                                                                                                                                                                                                                                 |
| [managedClustersListSample.js][managedclusterslistsample]                                                                         | gets a list of managed clusters in the specified subscription. x-ms-original-file: 2026-04-02-preview/ManagedClustersList.json                                                                                                                                                                                                                                                                                                                          |
| [managedClustersRebalanceLoadBalancersSample.js][managedclustersrebalanceloadbalancerssample]                                     | rebalance nodes across specific load balancers. x-ms-original-file: 2026-04-02-preview/LoadBalancers_Rebalance.json                                                                                                                                                                                                                                                                                                                                     |
| [managedClustersResetAADProfileSample.js][managedclustersresetaadprofilesample]                                                   | **WARNING**: This API will be deprecated. Please see [AKS-managed Azure Active Directory integration](https://aka.ms/aks-managed-aad) to update your cluster with AKS-managed Azure AD. x-ms-original-file: 2026-04-02-preview/ManagedClustersResetAADProfile.json                                                                                                                                                                                      |
| [managedClustersResetServicePrincipalProfileSample.js][managedclustersresetserviceprincipalprofilesample]                         | this action cannot be performed on a cluster that is not using a service principal x-ms-original-file: 2026-04-02-preview/ManagedClustersResetServicePrincipalProfile.json                                                                                                                                                                                                                                                                              |
| [managedClustersRotateClusterCertificatesSample.js][managedclustersrotateclustercertificatessample]                               | see [Certificate rotation](https://docs.microsoft.com/azure/aks/certificate-rotation) for more details about rotating managed cluster certificates. x-ms-original-file: 2026-04-02-preview/ManagedClustersRotateClusterCertificates.json                                                                                                                                                                                                                |
| [managedClustersRotateServiceAccountSigningKeysSample.js][managedclustersrotateserviceaccountsigningkeyssample]                   | rotates the service account signing keys of a managed cluster. x-ms-original-file: 2026-04-02-preview/ManagedClustersRotateServiceAccountSigningKeys.json                                                                                                                                                                                                                                                                                               |
| [managedClustersRunCommandSample.js][managedclustersruncommandsample]                                                             | aKS will create a pod to run the command. This is primarily useful for private clusters. For more information see [AKS Run Command](https://docs.microsoft.com/azure/aks/private-clusters#aks-run-command-preview). x-ms-original-file: 2026-04-02-preview/RunCommandRequest.json                                                                                                                                                                       |
| [managedClustersStartSample.js][managedclustersstartsample]                                                                       | see [starting a cluster](https://docs.microsoft.com/azure/aks/start-stop-cluster) for more details about starting a cluster. x-ms-original-file: 2026-04-02-preview/ManagedClustersStart.json                                                                                                                                                                                                                                                           |
| [managedClustersStopSample.js][managedclustersstopsample]                                                                         | this can only be performed on Azure Virtual Machine Scale set backed clusters. Stopping a cluster stops the control plane and agent nodes entirely, while maintaining all object and cluster state. A cluster does not accrue charges while it is stopped. See [stopping a cluster](https://docs.microsoft.com/azure/aks/start-stop-cluster) for more details about stopping a cluster. x-ms-original-file: 2026-04-02-preview/ManagedClustersStop.json |
| [managedClustersUpdateTagsSample.js][managedclustersupdatetagssample]                                                             | updates tags on a managed cluster. x-ms-original-file: 2026-04-02-preview/ManagedClustersUpdateTags.json                                                                                                                                                                                                                                                                                                                                                |
| [managedNamespacesCreateOrUpdateSample.js][managednamespacescreateorupdatesample]                                                 | creates or updates a namespace managed by ARM for the specified managed cluster. Users can configure aspects like resource quotas, network ingress/egress policies, and more. See aka.ms/aks/managed-namespaces for more details. x-ms-original-file: 2026-04-02-preview/ManagedNamespacesCreate_Update.json                                                                                                                                            |
| [managedNamespacesDeleteSample.js][managednamespacesdeletesample]                                                                 | deletes a namespace. x-ms-original-file: 2026-04-02-preview/ManagedNamespacesDelete.json                                                                                                                                                                                                                                                                                                                                                                |
| [managedNamespacesGetSample.js][managednamespacesgetsample]                                                                       | gets the specified namespace of a managed cluster. x-ms-original-file: 2026-04-02-preview/ManagedNamespacesGet.json                                                                                                                                                                                                                                                                                                                                     |
| [managedNamespacesListByManagedClusterSample.js][managednamespaceslistbymanagedclustersample]                                     | gets a list of managed namespaces in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/ManagedNamespacesList.json                                                                                                                                                                                                                                                                                                                   |
| [managedNamespacesListCredentialSample.js][managednamespaceslistcredentialsample]                                                 | lists the credentials of a namespace. x-ms-original-file: 2026-04-02-preview/ManagedNamespacesListCredentialResult.json                                                                                                                                                                                                                                                                                                                                 |
| [managedNamespacesUpdateSample.js][managednamespacesupdatesample]                                                                 | updates tags on a managed namespace. x-ms-original-file: 2026-04-02-preview/ManagedNamespacesUpdateTags.json                                                                                                                                                                                                                                                                                                                                            |
| [meshMembershipsCreateOrUpdateSample.js][meshmembershipscreateorupdatesample]                                                     | creates or updates the mesh membership of a managed cluster. x-ms-original-file: 2026-04-02-preview/MeshMemberships_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                 |
| [meshMembershipsDeleteSample.js][meshmembershipsdeletesample]                                                                     | deletes the mesh membership of a managed cluster. x-ms-original-file: 2026-04-02-preview/MeshMemberships_Delete.json                                                                                                                                                                                                                                                                                                                                    |
| [meshMembershipsGetSample.js][meshmembershipsgetsample]                                                                           | gets the mesh membership of a managed cluster. x-ms-original-file: 2026-04-02-preview/MeshMemberships_Get.json                                                                                                                                                                                                                                                                                                                                          |
| [meshMembershipsListByManagedClusterSample.js][meshmembershipslistbymanagedclustersample]                                         | lists mesh memberships in a managed cluster. x-ms-original-file: 2026-04-02-preview/MeshMemberships_ListByManagedCluster.json                                                                                                                                                                                                                                                                                                                           |
| [operationStatusResultGetByAgentPoolSample.js][operationstatusresultgetbyagentpoolsample]                                         | get the status of a specific operation in the specified agent pool. x-ms-original-file: 2026-04-02-preview/OperationStatusResultGetByAgentPool.json                                                                                                                                                                                                                                                                                                     |
| [operationStatusResultGetSample.js][operationstatusresultgetsample]                                                               | get the status of a specific operation in the specified managed cluster. x-ms-original-file: 2026-04-02-preview/OperationStatusResultGet.json                                                                                                                                                                                                                                                                                                           |
| [operationStatusResultListSample.js][operationstatusresultlistsample]                                                             | gets a list of operations in the specified managedCluster x-ms-original-file: 2026-04-02-preview/OperationStatusResultList.json                                                                                                                                                                                                                                                                                                                         |
| [operationsListSample.js][operationslistsample]                                                                                   | gets a list of operations. x-ms-original-file: 2026-04-02-preview/Operation_List.json                                                                                                                                                                                                                                                                                                                                                                   |
| [privateEndpointConnectionsDeleteSample.js][privateendpointconnectionsdeletesample]                                               | deletes a private endpoint connection. x-ms-original-file: 2026-04-02-preview/PrivateEndpointConnectionsDelete.json                                                                                                                                                                                                                                                                                                                                     |
| [privateEndpointConnectionsGetSample.js][privateendpointconnectionsgetsample]                                                     | to learn more about private clusters, see: https://docs.microsoft.com/azure/aks/private-clusters x-ms-original-file: 2026-04-02-preview/PrivateEndpointConnectionsGet.json                                                                                                                                                                                                                                                                              |
| [privateEndpointConnectionsListSample.js][privateendpointconnectionslistsample]                                                   | to learn more about private clusters, see: https://docs.microsoft.com/azure/aks/private-clusters x-ms-original-file: 2026-04-02-preview/PrivateEndpointConnectionsList.json                                                                                                                                                                                                                                                                             |
| [privateEndpointConnectionsUpdateSample.js][privateendpointconnectionsupdatesample]                                               | updates a private endpoint connection. x-ms-original-file: 2026-04-02-preview/PrivateEndpointConnectionsUpdate.json                                                                                                                                                                                                                                                                                                                                     |
| [privateLinkResourcesListSample.js][privatelinkresourceslistsample]                                                               | to learn more about private clusters, see: https://docs.microsoft.com/azure/aks/private-clusters x-ms-original-file: 2026-04-02-preview/PrivateLinkResourcesList.json                                                                                                                                                                                                                                                                                   |
| [resolvePrivateLinkServiceIdPostSample.js][resolveprivatelinkserviceidpostsample]                                                 | gets the private link service ID for the specified managed cluster. x-ms-original-file: 2026-04-02-preview/ResolvePrivateLinkServiceId.json                                                                                                                                                                                                                                                                                                             |
| [snapshotsCreateOrUpdateSample.js][snapshotscreateorupdatesample]                                                                 | creates or updates a snapshot. x-ms-original-file: 2026-04-02-preview/SnapshotsCreate.json                                                                                                                                                                                                                                                                                                                                                              |
| [snapshotsDeleteSample.js][snapshotsdeletesample]                                                                                 | deletes a snapshot. x-ms-original-file: 2026-04-02-preview/SnapshotsDelete.json                                                                                                                                                                                                                                                                                                                                                                         |
| [snapshotsGetSample.js][snapshotsgetsample]                                                                                       | gets a snapshot. x-ms-original-file: 2026-04-02-preview/SnapshotsGet.json                                                                                                                                                                                                                                                                                                                                                                               |
| [snapshotsListByResourceGroupSample.js][snapshotslistbyresourcegroupsample]                                                       | lists snapshots in the specified subscription and resource group. x-ms-original-file: 2026-04-02-preview/SnapshotsListByResourceGroup.json                                                                                                                                                                                                                                                                                                              |
| [snapshotsListSample.js][snapshotslistsample]                                                                                     | gets a list of snapshots in the specified subscription. x-ms-original-file: 2026-04-02-preview/SnapshotsList.json                                                                                                                                                                                                                                                                                                                                       |
| [snapshotsUpdateTagsSample.js][snapshotsupdatetagssample]                                                                         | updates tags on a snapshot. x-ms-original-file: 2026-04-02-preview/SnapshotsUpdateTags.json                                                                                                                                                                                                                                                                                                                                                             |
| [trustedAccessRoleBindingsCreateOrUpdateSample.js][trustedaccessrolebindingscreateorupdatesample]                                 | create or update a trusted access role binding x-ms-original-file: 2026-04-02-preview/TrustedAccessRoleBindings_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                     |
| [trustedAccessRoleBindingsDeleteSample.js][trustedaccessrolebindingsdeletesample]                                                 | delete a trusted access role binding. x-ms-original-file: 2026-04-02-preview/TrustedAccessRoleBindings_Delete.json                                                                                                                                                                                                                                                                                                                                      |
| [trustedAccessRoleBindingsGetSample.js][trustedaccessrolebindingsgetsample]                                                       | get a trusted access role binding. x-ms-original-file: 2026-04-02-preview/TrustedAccessRoleBindings_Get.json                                                                                                                                                                                                                                                                                                                                            |
| [trustedAccessRoleBindingsListSample.js][trustedaccessrolebindingslistsample]                                                     | list trusted access role bindings. x-ms-original-file: 2026-04-02-preview/TrustedAccessRoleBindings_List.json                                                                                                                                                                                                                                                                                                                                           |
| [trustedAccessRolesListSample.js][trustedaccessroleslistsample]                                                                   | list supported trusted access roles. x-ms-original-file: 2026-04-02-preview/TrustedAccessRoles_List.json                                                                                                                                                                                                                                                                                                                                                |
| [vmSkusListSample.js][vmskuslistsample]                                                                                           | gets the list of VM SKUs accepted by AKS when creating node pools in a specified location. AKS will perform a best effort approach to provision the requested VM SKUs, but availability is not guaranteed. x-ms-original-file: 2026-04-02-preview/ListAvailableContainerServiceVmSkus.json                                                                                                                                                              |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node agentPoolsAbortLatestOperationSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node agentPoolsAbortLatestOperationSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[agentpoolsabortlatestoperationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/agentPoolsAbortLatestOperationSample.js
[agentpoolscompleteupgradesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/agentPoolsCompleteUpgradeSample.js
[agentpoolscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/agentPoolsCreateOrUpdateSample.js
[agentpoolsdeletemachinessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/agentPoolsDeleteMachinesSample.js
[agentpoolsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/agentPoolsDeleteSample.js
[agentpoolsgetavailableagentpoolversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/agentPoolsGetAvailableAgentPoolVersionsSample.js
[agentpoolsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/agentPoolsGetSample.js
[agentpoolsgetupgradeprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/agentPoolsGetUpgradeProfileSample.js
[agentpoolslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/agentPoolsListSample.js
[agentpoolsupgradenodeimageversionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/agentPoolsUpgradeNodeImageVersionSample.js
[containerservicelistnodeimageversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/containerServiceListNodeImageVersionsSample.js
[identitybindingscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/identityBindingsCreateOrUpdateSample.js
[identitybindingsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/identityBindingsDeleteSample.js
[identitybindingsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/identityBindingsGetSample.js
[identitybindingslistbymanagedclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/identityBindingsListByManagedClusterSample.js
[jwtauthenticatorscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/jwtAuthenticatorsCreateOrUpdateSample.js
[jwtauthenticatorsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/jwtAuthenticatorsDeleteSample.js
[jwtauthenticatorsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/jwtAuthenticatorsGetSample.js
[jwtauthenticatorslistbymanagedclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/jwtAuthenticatorsListByManagedClusterSample.js
[loadbalancerscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/loadBalancersCreateOrUpdateSample.js
[loadbalancersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/loadBalancersDeleteSample.js
[loadbalancersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/loadBalancersGetSample.js
[loadbalancerslistbymanagedclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/loadBalancersListByManagedClusterSample.js
[machinescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/machinesCreateOrUpdateSample.js
[machinesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/machinesGetSample.js
[machineslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/machinesListSample.js
[maintenanceconfigurationscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/maintenanceConfigurationsCreateOrUpdateSample.js
[maintenanceconfigurationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/maintenanceConfigurationsDeleteSample.js
[maintenanceconfigurationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/maintenanceConfigurationsGetSample.js
[maintenanceconfigurationslistbymanagedclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/maintenanceConfigurationsListByManagedClusterSample.js
[maintenancewindowscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/maintenanceWindowsCreateOrUpdateSample.js
[maintenancewindowsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/maintenanceWindowsDeleteSample.js
[maintenancewindowsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/maintenanceWindowsGetSample.js
[maintenancewindowslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/maintenanceWindowsListBySubscriptionSample.js
[maintenancewindowslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/maintenanceWindowsListSample.js
[maintenancewindowsupdatetagssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/maintenanceWindowsUpdateTagsSample.js
[managedclustersnapshotscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClusterSnapshotsCreateOrUpdateSample.js
[managedclustersnapshotsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClusterSnapshotsDeleteSample.js
[managedclustersnapshotsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClusterSnapshotsGetSample.js
[managedclustersnapshotslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClusterSnapshotsListByResourceGroupSample.js
[managedclustersnapshotslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClusterSnapshotsListSample.js
[managedclustersnapshotsupdatetagssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClusterSnapshotsUpdateTagsSample.js
[managedclustersabortlatestoperationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersAbortLatestOperationSample.js
[managedclusterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersCreateOrUpdateSample.js
[managedclustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersDeleteSample.js
[managedclustersgetaccessprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersGetAccessProfileSample.js
[managedclustersgetcommandresultsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersGetCommandResultSample.js
[managedclustersgetguardrailsversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersGetGuardrailsVersionsSample.js
[managedclustersgetmeshrevisionprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersGetMeshRevisionProfileSample.js
[managedclustersgetmeshupgradeprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersGetMeshUpgradeProfileSample.js
[managedclustersgetsafeguardsversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersGetSafeguardsVersionsSample.js
[managedclustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersGetSample.js
[managedclustersgetupgradeprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersGetUpgradeProfileSample.js
[managedclusterslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersListByResourceGroupSample.js
[managedclusterslistclusteradmincredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersListClusterAdminCredentialsSample.js
[managedclusterslistclustermonitoringusercredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersListClusterMonitoringUserCredentialsSample.js
[managedclusterslistclusterusercredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersListClusterUserCredentialsSample.js
[managedclusterslistguardrailsversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersListGuardrailsVersionsSample.js
[managedclusterslistkubernetesversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersListKubernetesVersionsSample.js
[managedclusterslistmeshrevisionprofilessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersListMeshRevisionProfilesSample.js
[managedclusterslistmeshupgradeprofilessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersListMeshUpgradeProfilesSample.js
[managedclusterslistoutboundnetworkdependenciesendpointssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersListOutboundNetworkDependenciesEndpointsSample.js
[managedclusterslistsafeguardsversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersListSafeguardsVersionsSample.js
[managedclusterslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersListSample.js
[managedclustersrebalanceloadbalancerssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersRebalanceLoadBalancersSample.js
[managedclustersresetaadprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersResetAADProfileSample.js
[managedclustersresetserviceprincipalprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersResetServicePrincipalProfileSample.js
[managedclustersrotateclustercertificatessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersRotateClusterCertificatesSample.js
[managedclustersrotateserviceaccountsigningkeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersRotateServiceAccountSigningKeysSample.js
[managedclustersruncommandsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersRunCommandSample.js
[managedclustersstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersStartSample.js
[managedclustersstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersStopSample.js
[managedclustersupdatetagssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedClustersUpdateTagsSample.js
[managednamespacescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedNamespacesCreateOrUpdateSample.js
[managednamespacesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedNamespacesDeleteSample.js
[managednamespacesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedNamespacesGetSample.js
[managednamespaceslistbymanagedclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedNamespacesListByManagedClusterSample.js
[managednamespaceslistcredentialsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedNamespacesListCredentialSample.js
[managednamespacesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/managedNamespacesUpdateSample.js
[meshmembershipscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/meshMembershipsCreateOrUpdateSample.js
[meshmembershipsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/meshMembershipsDeleteSample.js
[meshmembershipsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/meshMembershipsGetSample.js
[meshmembershipslistbymanagedclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/meshMembershipsListByManagedClusterSample.js
[operationstatusresultgetbyagentpoolsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/operationStatusResultGetByAgentPoolSample.js
[operationstatusresultgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/operationStatusResultGetSample.js
[operationstatusresultlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/operationStatusResultListSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/operationsListSample.js
[privateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/privateEndpointConnectionsDeleteSample.js
[privateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/privateEndpointConnectionsGetSample.js
[privateendpointconnectionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/privateEndpointConnectionsListSample.js
[privateendpointconnectionsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/privateEndpointConnectionsUpdateSample.js
[privatelinkresourceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/privateLinkResourcesListSample.js
[resolveprivatelinkserviceidpostsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/resolvePrivateLinkServiceIdPostSample.js
[snapshotscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/snapshotsCreateOrUpdateSample.js
[snapshotsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/snapshotsDeleteSample.js
[snapshotsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/snapshotsGetSample.js
[snapshotslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/snapshotsListByResourceGroupSample.js
[snapshotslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/snapshotsListSample.js
[snapshotsupdatetagssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/snapshotsUpdateTagsSample.js
[trustedaccessrolebindingscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/trustedAccessRoleBindingsCreateOrUpdateSample.js
[trustedaccessrolebindingsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/trustedAccessRoleBindingsDeleteSample.js
[trustedaccessrolebindingsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/trustedAccessRoleBindingsGetSample.js
[trustedaccessrolebindingslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/trustedAccessRoleBindingsListSample.js
[trustedaccessroleslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/trustedAccessRolesListSample.js
[vmskuslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerservice/arm-containerservice/samples/v25/javascript/vmSkusListSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-containerservice
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/containerservice/arm-containerservice/README.md
